# cpp_mipt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
01/: hello_world.cpp
02/: 1.cpp  2.cpp  3.cpp  4a.cpp
03/: least_squares.cpp  test.py
04/: 19-21.cpp
05/: bulls_and_cows.cpp
06/: CMakeLists.txt  calculator_without_bugs.cpp  data.txt
06/include/calculator/: calculator.h
06/include/calculator/parser/: parser.h
06/include/calculator/parser/token_stream/: token_stream.h
06/include/calculator/symbol_table/: symbol_table.h
06/lib/: std_lib_facilities.h
06/src/parser/: CMakeLists.txt  parser.cpp  token_stream.cpp
06/src/symbol_table/: CMakeLists.txt  symbol_table.cpp
07/: main.cpp  vec2d.cpp  vec2d.h
tasks/: nim_game.cpp
vector/: CMakeLists.txt  main.cpp  vector.h
vector/lib/Tracer_lib/: tracer.cpp  tracer.h
